<resources>
    <string name="app_name">Millionaire</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="who_want">КТО ХОЧЕТ СТАТЬ МИЛЛИОНЕРОМ?</string>
    <string name="start">НАЧАТЬ</string>
    <string name="result">Ваш лучший результат</string>
    <string name="results">Ваши результаты</string>
    <string name="count">Ваш счет:</string>
    <string name="_0">0</string>
</resources>