<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#14213d"
    tools:context=".presentation.ui.fragment.start.StartFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/who_want"
        android:textColor="#fca311"
        android:textSize="44sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="@drawable/bg_btn_start"
        android:padding="20dp"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btn_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:padding="20dp"
        android:background="@drawable/bg_btn_start"
        android:text="@string/results"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />




</FrameLayout>