<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#14213d"
    tools:context=".presentation.ui.fragment.game.GameFragment">

    <TextView
        android:id="@+id/tv_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_tv_money"
        android:padding="10dp"
        android:textColor="@color/white2"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="5003333" />

    <me.grantland.widget.AutofitTextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="70dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:padding="20dp"
        android:textColor="#fca311"
        android:textSize="30sp"
        android:textStyle="bold"
        autofit:maxLines="3"
        autofit:minTextSize="12sp"
        tools:text="@string/who_want" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/count"
        android:textColor="#fca311"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:gravity="start"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/_0"
        android:textColor="#fca311"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <me.grantland.widget.AutofitTextView
            android:id="@+id/btn_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:background="@drawable/bg_tv_results"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:padding="20dp"
            android:textColor="@color/white2"
            android:textSize="24sp"
            android:textStyle="bold"
            autofit:minTextSize="12sp"
            tools:text="Джордж Марттин" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/btn_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_tv_results"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:padding="20dp"
            android:textColor="@color/white2"
            android:textSize="24sp"
            android:textStyle="bold"
            autofit:minTextSize="12sp"
            tools:text="A:slfls;fs;" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/btn_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_tv_results"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:padding="20dp"
            android:textColor="@color/white2"
            android:textSize="24sp"
            android:textStyle="bold"
            autofit:minTextSize="12sp"
            tools:text="A:slfls;fs;" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/btn_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_tv_results"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:padding="20dp"
            android:textColor="@color/white2"
            android:textSize="24sp"
            android:textStyle="bold"
            autofit:minTextSize="12sp"
            tools:text="A:slfls;fs;" />
    </LinearLayout>


    <ImageView
        android:id="@+id/home"
        android:layout_width="58dp"
        android:layout_height="63dp"
        android:src="@drawable/img_home" />

    <ImageView
        android:id="@+id/history"
        android:layout_width="58dp"
        android:layout_height="63dp"
        android:layout_gravity="end"
        android:src="@drawable/img_history" />

</FrameLayout>
